Change List.of() to Arrays.asList() for Java 8